Fixed some spacing on ProfilePagePost

--- a/kairos-app/src/components/subcomponents/Modal/Modal.css
+++ b/kairos-app/src/components/subcomponents/Modal/Modal.css
@@ -25,6 +25,7 @@
 .modal_web {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 110px;
   text-align: centr;
   width: 640px;
   height: 480px;
